--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,7 @@
+== 0.1.2 / 2008-08-21
+
+* Add json serialization support to search results
+
 == 0.1.1 / 2008-08-06
 
 * Add support for bulk indexing of multiple records
